<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turms_sensors_drivers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leo@todo.todo">leo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libserial-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turms_msgs</exec_depend>
  <exec_depend>hardware</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
